Removed borders -Added universal styling

--- a/css/all.css
+++ b/css/all.css
@@ -123,4 +123,7 @@ table {
   border-collapse: collapse;
   border-spacing: 0; }
 
+a {
+  text-decoration: none; }
+
 /*# sourceMappingURL=all.css.map */
