--- a/css/header.css
+++ b/css/header.css
@@ -1,38 +1,46 @@
 header{
     width:100%;
-    background-color: grey;
-    display:grid;
-    grid-template-rows:repeat(8,20px);
-    grid-template-columns: 1.5fr 6fr 1.5fr;
+
+    padding:40px;
+    background-color:#A9A9A9;
+    display:flex;
+    
     justify-content: space-around;
     text-align: center
-    
-    
-}
-
-nav>.nav-item>a{
-    color:#4e4c4c;
-    font-size:16px;
-    font-family: cursive; 
 }
 
 .header-image1{
-    grid-row:3/7;
-    background-color: #e7e2e2;
-    
+    background-color: #3f3c3c;
+    width:10%;
+    height:2vm
+}
+
+.image2{
+    width:7%;
+    height: 8vh;
+    border-radius:10px;
+    margin-top: 15px
 
 }
+
 nav{
-    display:flex;
-    justify-content: space-around;
-    grid-row:2/9;
-    background-color:transparent;
-    padding-top: 10px
+    display:flex
 }
 
+nav>a:hover{
+    background-color: #3f3c3c;
+
+}
 .nav-item{
-    background-color: #c5bdbd;
-    width:10vw;
-    height:80%;
-    border-radius:10px
+    margin-left:20px
+}
+.nav-item>h1{
+    font-size:28px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+}
+
+.nav-item>h2{
+    font-size:17px;
+    font-family:'Source Serif Pro', serif;
+    font-style: italic
 }
