made write-ups links

--- a/css/all.css
+++ b/css/all.css
@@ -124,6 +124,7 @@ table {
   border-spacing: 0; }
 
 a {
-  text-decoration: none; }
+  text-decoration: none;
+color:black }
 
 /*# sourceMappingURL=all.css.map */
