--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 .featured-posts {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-template-rows: repeat(14, 100px);
+  grid-template-rows: repeat(18, 100px);
   background-color: #a09c9c;
   width: 100%;
   color: white;
@@ -12,7 +12,7 @@
 .main-posts2,
 .main-posts3 {
   background-color: #c6c6c6;
-  grid-row: 1/8;
+  grid-row: 1/10;
   grid-column: 1/3;
   padding: 40px;
 }
@@ -25,7 +25,7 @@
 
 .main-posts3,
 .main-posts4 {
-  grid-row: 8/15;
+  grid-row: 10/19;
   grid-column: 1/3;
 }
 
@@ -39,7 +39,7 @@
   text-align: center;
   display: flex;
   flex-direction: column;
-  font-size: 28px;
+  font-size: 26px;
   font-family: 'Nunito Sans', sans-serif;
   font-style: bold;
   font-weight: 800;
@@ -53,11 +53,11 @@
   background-color: rgb(226, 217, 217);
   width: 60%;
   margin: 0 auto;
-  padding: 10px;
+  padding: 7px;
 }
 
 .div2 {
-  width: 20%;
+  width: 30%;
 }
 
 .image {
@@ -101,9 +101,10 @@
 
 .divine {
   display: flex;
-  padding-top: 18%;
+  padding-top: 30%;
   margin-left: 50px;
   font-weight: bold;
+  color:#777777
 }
 
 .strategy,
