--- a/css/green.css
+++ b/css/green.css
@@ -43,6 +43,8 @@
       background: #7E7E7E
   }
 
+  
+
   .person-of-the-week{
       display: flex;
       justify-content: space-around;
@@ -59,7 +61,7 @@
       width:80%;
       height:80%;
       font-size:18px;
-      font-family: 'Spinnaker', sans-serif;;
+      font-family: 'Spinnaker', sans-serif;
       line-height:1.6;
       color:#7e7e7e
   }
@@ -67,17 +69,72 @@
   .article-grid{
       display:grid;
       grid-template-columns: repeat(4,1fr);
-      grid-template-rows: repeat(18,100px)
+      grid-template-rows: repeat(12,100px)
   }
 
-  .article1,.article3,.article5{
+  .article1,.article3,.article5,.article{
       grid-column:1/3;
-      grid-row:1/7;
-      border:1px solid black
+      grid-row:1/5;
+      display:flex;
+      justify-content: center;
+      align-content: center;
+      padding-top:10%
+      
   }
-  .article3{
-      grid-row:7/13
+  
+  .article2,.article4,.article6{
+grid-column:3/5;
+grid-row:1/5
   }
-  .article5{
-      grid-row:13/18
+
+  .article3,.article4{
+    grid-row:5/9;
+}
+.article5,.article6{
+    grid-row:9/13;
+}
+
+  .article-image{
+      width:7vw;
+      height:7vw;
+      border-radius:50%;
+      background-color:black;
+      margin-right:5%
+  }
+
+  .article-text{
+      font-size: 18px;
+      width:50%;
+      line-height: 1.6
+  }
+
+  .community-links{
+      font-family:'Spinnaker', sans-serif;
+      color:#7e7e7e
+  }
+  .date{
+      font-size:14px
+  }
+
+  .name{
+      text-decoration: underline
+  }
+
+  .twitter{
+    width:15%;
+      margin:0px auto;
+      margin-top:10%;
+      text-align: center;
+      border-bottom: 2px solid grey;
+      font-size:16px;
+      color: black;
+      margin-bottom:10%;
+      
+
+  }
+
+  .heading{
+      font-weight:800;
+      font-size:26px;
+      color:black
   }
