--- a/css/footer.css
+++ b/css/footer.css
@@ -16,18 +16,44 @@
 }
 
 .main-footer .row-heading {
-  background-color: #cdcdcd;
+  /* background-color: #cdcdcd; */
   width: 50%;
 }
 
+.row-heading h2 {
+  color: silver;
+  font-size: 1.5rem;
+}
+
 .main-footer .row-link-cloud {
-  background-color: silver;
+  /* background-color: silver; */
   width: 70%;
   height: 30vh;
 }
 
+.footer-nav {
+  list-style: inside;
+  color: #1f1e1e;
+  font-size: 2rem;
+}
+
+.footer-nav .footer-links {
+  display: inline;
+  color: #5a5a5a;
+}
+
+.footer-nav .footer-links a {
+  color: silver;
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
+.footer-nav .footer-links a:hover {
+  color: #1f1e1e;
+}
+
 .main-footer .row-footer {
-  background-color: #b3b3b3;
+  /* background-color: #b3b3b3; */
   width: 60%;
   margin-bottom: 5vh;
   display: grid;
@@ -35,19 +61,19 @@
 }
 
 .main-footer .row-footer .lefted {
-  background-color: #a6a6a6;
+  /* background-color: #a6a6a6; */
   grid-column-start: 1;
   grid-column-end: 2;
 }
 
 .main-footer .row-footer .righted {
-  background-color: #a6a6a6;
+  /* background-color: #a6a6a6; */
   grid-column-start: 3;
   grid-column-end: 4;
 }
 
 .main-footer .row-footer .centered {
-  background-color: #9a9a9a;
+  /* background-color: #9a9a9a; */
   grid-column-start: 2;
   grid-column-end: 3;
   padding-top: 10vh;
@@ -55,10 +81,15 @@
 }
 
 .main-footer .row-footer .centered .quick-links {
-  background-color: #8d8d8d;
+  /* background-color: #8d8d8d; */
   margin: 0 2vw;
   padding: 1vh 0;
   margin-top: 1vh;
+}
+
+.centered em {
+  /* background-color: #8d8d8d; */
+  font-style: italic;
 }
 
 .main-footer .row-footer .content-image {
