--- a/css/green.css
+++ b/css/green.css
@@ -106,7 +106,7 @@
   width: 7vw;
   height: 7vw;
   border-radius: 50%;
-  background-color: black;
+  background-color: #7e7e7e;
   margin-right: 5%;
 }
 
@@ -142,6 +142,6 @@
 
 .heading {
   font-weight: 800;
-  font-size: 26px;
+  font-size: 28px;
   color: black;
 }
